--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -1,12 +1,13 @@
-name: Test Workflow
+name: Run Every Minute
 
 on:
-  workflow_dispatch:  # Allows manual triggering
+  schedule:
+    - cron: '*/1 * * * *'  # Runs every minute
 
 jobs:
   test_job:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Print a message
-        run: echo "GitHub Actions are working!"
+      - name: Print the current time
+        run: echo "The current time is $(date)"
